─────────────────┨ 0.4.0 ┠─────────────────
1) Some template magic in the configuration parser. It should make adding
new rules easier and less error-prone.

2) New "rule": replace. Search and replace all occurrences of the
substring to the new string in the CURRENT UNFINISHED FILENAME. It is
a new type of rules.

3) Now files are alphabetically sorted before processing.

4) Tests. Nothing for users, but I expect a slightly less amount of errors
in the code.

5) Documentation now is more... better.

─────────────────┨ 0.3.0 ┠─────────────────
New "rule": filename. Just an original filename without an extension.
New "rule": filesize.
Readme fix: text->ext typo.