@@ -1,8 +1,8 @@
 #include "ruleExtension.h"
 #include <iostream>
-#include <algorithm>
+#include <unicode/unistr.h>
 
-RuleExtension::RuleExtension(Mode _mode, std::string _ext)
+RuleExtension::RuleExtension(Mode _mode, const std::string& _ext)
 	: RuleBase(RuleType::Extension)
 	, mode{_mode}
 	, ext {_ext}
@@ -10,7 +10,7 @@ RuleExtension::RuleExtension(Mode _mode, std::string _ext)
 
 }
 
-void	RuleExtension::process(std::filesystem::path& name)
+void	RuleExtension::process(const std::filesystem::path& name)
 {
 	if (ext == "")
 	{
@@ -24,15 +24,42 @@ void	RuleExtension::process(std::filesystem::path& name)
 	{
 		case Mode::lowercase:
 		{
-			std::transform(result.begin(), result.end(), result.begin(), ::tolower);
+			icu::UnicodeString icu_str(result.c_str());
+			result.clear();
+			icu_str.toLower();
+			icu_str.toUTF8String(result);
 		}break;
 		case Mode::uppercase:
 		{
-			std::transform(result.begin(), result.end(), result.begin(), ::toupper);
+			icu::UnicodeString icu_str(result.c_str());
+			result.clear();
+			icu_str.toUpper();
+			icu_str.toUTF8String(result);
 		}break;
 		case Mode::sic:
 		{
 
 		}break;
+	}
+}
+
+void	RuleExtension::test()
+{
+	{
+		RuleExtension rule(RuleExtension::Mode::lowercase, "");
+		rule.process(std::filesystem::path("dir/subdir1/subdir2/file.dAt"));
+		testsCmp(1, rule, ".dat");
+	}
+
+	{
+		RuleExtension rule(RuleExtension::Mode::lowercase, "");
+		rule.process(std::filesystem::path("dir/subdir1/subdir2/file.РаСширение"));
+		testsCmp(2, rule, ".расширение");
+	}
+
+	{
+		RuleExtension rule(RuleExtension::Mode::lowercase, "");
+		rule.process(std::filesystem::path("dir/subdir1/subdir2/file.MiXМикС1"));
+		testsCmp(3, rule, ".mixмикс1");
 	}
 }
