@@ -1,6 +1,6 @@
 #include "ruleFilename.h"
 #include <iostream>
-#include <algorithm>
+#include <unicode/unistr.h>
 
 RuleFilename::RuleFilename(Mode _mode)
 	: RuleBase(RuleType::Filename)
@@ -9,7 +9,7 @@ RuleFilename::RuleFilename(Mode _mode)
 
 }
 
-void	RuleFilename::process(std::filesystem::path& name)
+void	RuleFilename::process(const std::filesystem::path& name)
 {
 	result = name.stem();
 
@@ -17,15 +17,37 @@ void	RuleFilename::process(std::filesystem::path& name)
 	{
 		case Mode::lowercase:
 		{
-			std::transform(result.begin(), result.end(), result.begin(), ::tolower);
+			icu::UnicodeString icu_str(result.c_str());
+			result.clear();
+			icu_str.toLower();
+			icu_str.toUTF8String(result);
 		}break;
 		case Mode::uppercase:
 		{
-			std::transform(result.begin(), result.end(), result.begin(), ::toupper);
+			icu::UnicodeString icu_str(result.c_str());
+			result.clear();
+			icu_str.toUpper();
+			icu_str.toUTF8String(result);
 		}break;
 		case Mode::sic:
 		{
 
 		}break;
 	}
+}
+
+void	RuleFilename::test()
+{
+	{
+		RuleFilename rule(RuleFilename::Mode::lowercase);
+		rule.process(std::filesystem::path("dir/subdir1/subdir2/fIlE.dAt"));
+		testsCmp(1, rule, "file");
+	}
+
+	{
+		RuleFilename rule(RuleFilename::Mode::uppercase);
+		rule.process(std::filesystem::path("dir/subdir1/subdir2/fileфайл.dat"));
+		testsCmp(2, rule, "FILEФАЙЛ");
+	}
+
 }
