@@ -5,3 +5,15 @@ RuleText::RuleText(const std::string& text)
 {
 	result = text;
 }
+
+void	RuleText::test()
+{
+	{
+		RuleText rule("Test");
+		testsCmp(1, rule, "Test");
+	}
+	{
+		RuleText rule("");
+		testsCmp(2, rule, "");
+	}
+}
